--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.7",
     "core-js": "^3.6.5",
     "element-plus": "^2.5.6",
+    "moment": "^2.30.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
